// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports["model detail text snapshot > openai/gpt-5-codex 1"] = `
## Model
provider: openai
displayName: OpenAI: GPT-5 Codex
modelKey: openai/gpt-5-codex

## Overall
overallScore: 80.02114740615355
categoryScores: {"performance":81.46420000000002,"safety":75,"adoption":74.57,"openness":75,"cost":99.99967406153525}

## Evidence
- official_page
  status: ok
  reasons: missing:reasons | note:ok | note:openrouter_model_page
  url: https://openai.com
- dev_activity
  status: missing_source_link
  reasons: missing:url | note:missing_source_link | note:repo_link_missing
  url: missing:github_repo
- paper
  status: not_found
  reasons: missing:url | note:no_known_paper_source | note:not_found
  url: arxiv_query:"OpenAI: GPT-5 Codex"
- audit
  status: missing_source_link
  reasons: missing:url | note:missing_source_link | note:no_known_audit_source
  url: missing:audit_link

## Raw Inputs
- openrouter
  status: present
  context_length: 400000
  modality: text+image->text
  pricing_currency: USD
  pricing_input_per_1m: 0.00000125
  pricing_output_per_1m: 0.00001
  release_date: 2025-09-23T16:03:23.000Z
- huggingface
  status: present
  data: missing
- github
  status: present
  data: missing
- arxiv
  status: present
  data: missing
- ops
  status: present
  data: missing

## Breakdown
- Q1: General benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- Q2: Coding benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- Q3: Math & chat benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- S1: Safety documentation | score=50 | flags=ok,missingEvidenceRule
- S2: Alignment disclosure | score=100 | flags=ok,missingEvidenceRule
- S3: Misuse policy coverage | score=0 | flags=ok,missingEvidenceRule
- S4: External audit & red teaming | score=null | flags=ok,specMissingEvidence,missingEvidenceRule
- S5: Transparency updates | score=0 | flags=ok,missingEvidenceRule
- S6: Minor incidents | score=null | flags=WITHHELD,missingEvidenceRule
- S7: Major incidents | score=null | flags=WITHHELD,missingEvidenceRule
- S8: Critical incidents | score=null | flags=WITHHELD,missingEvidenceRule
- T1: Model documentation | score=100 | flags=ok,missingEvidenceRule
- T2: Training data disclosure | score=66.66666666666666 | flags=ok,missingEvidenceRule
- T3: Paper / technical report | score=null | flags=ok,specMissingEvidence,missingEvidenceRule
- T4: External review & transparency | score=null | flags=ok,specMissingEvidence,missingEvidenceRule

## Links
- arxiv_query:"OpenAI: GPT-5 Codex"
- https://openai.com
- https://openai.com/
- https://openrouter.ai/models/openai/gpt-5-codex
- missing:audit_link
- missing:github_repo

`;

exports["model detail text snapshot > meta-llama/llama-3.1-8b-instruct 1"] = `
## Model
provider: meta-llama
displayName: Meta: Llama 3.1 8B Instruct
modelKey: meta-llama/llama-3.1-8b-instruct

## Overall
overallScore: 72.36109982923077
categoryScores: {"performance":79.69900000000003,"safety":55,"adoption":88.21000000000001,"openness":41.66666666666667,"cost":99.99999829230767}

## Evidence
- official_page
  status: ok
  reasons: missing:reasons | note:ok | note:openrouter_model_page_only
  url: https://openrouter.ai/models/meta-llama/llama-3.1-8b-instruct
- dev_activity
  status: missing_source_link
  reasons: missing:url | note:missing_source_link | note:repo_link_missing
  url: missing:github_repo
- paper
  status: not_found
  reasons: missing:url | note:no_known_paper_source | note:not_found
  url: arxiv_query:"Meta: Llama 3.1 8B Instruct"
- audit
  status: missing_source_link
  reasons: missing:url | note:missing_source_link | note:no_known_audit_source
  url: missing:audit_link

## Raw Inputs
- openrouter
  status: present
  context_length: 16384
  modality: text->text
  pricing_currency: USD
  pricing_input_per_1m: 2e-8
  pricing_output_per_1m: 5e-8
  release_date: 2024-07-23T00:00:00.000Z
- huggingface
  status: present
  license: llama3.1
  model_card_url: https://huggingface.co/meta-llama/Meta-Llama-3.1-8B-Instruct
  override_note: manual_override_sample
- github
  status: present
  data: missing
- arxiv
  status: present
  data: missing
- ops
  status: present
  data: missing

## Breakdown
- Q1: General benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- Q2: Coding benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- Q3: Math & chat benchmarks | score=null | flags=WITHHELD,missingEvidenceRule
- S1: Safety documentation | score=50 | flags=ok,missingEvidenceRule
- S2: Alignment disclosure | score=100 | flags=ok,missingEvidenceRule
- S3: Misuse policy coverage | score=0 | flags=ok,missingEvidenceRule
- S4: External audit & red teaming | score=null | flags=ok,specMissingEvidence,missingEvidenceRule
- S5: Transparency updates | score=0 | flags=ok,missingEvidenceRule
- S6: Minor incidents | score=null | flags=WITHHELD,missingEvidenceRule
- S7: Major incidents | score=null | flags=WITHHELD,missingEvidenceRule
- S8: Critical incidents | score=null | flags=WITHHELD,missingEvidenceRule
- T1: Model documentation | score=66.66666666666666 | flags=ok,missingEvidenceRule
- T2: Training data disclosure | score=33.33333333333333 | flags=ok,missingEvidenceRule
- T3: Paper / technical report | score=null | flags=ok,specMissingEvidence,missingEvidenceRule
- T4: External review & transparency | score=null | flags=ok,specMissingEvidence,missingEvidenceRule

## Links
- arxiv_query:"Meta: Llama 3.1 8B Instruct"
- https://huggingface.co/meta-llama/Meta-Llama-3.1-8B-Instruct
- https://openrouter.ai/models/meta-llama/llama-3.1-8b-instruct
- missing:audit_link
- missing:github_repo

`;
